fix icons dark mode

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -42,7 +42,7 @@
     --foreground: #ededed;
     --primary: #ffffff;
     --primary-70: rgba(255, 255, 255, 0.7);
-    --secundary: rgba(255, 255, 255, 0.5);
+    --secundary: rgba(0, 0, 0, 0.5);
     --t-light-btn: #ffffff;
     --t-dark-btn: #000000;
 
